testing/e2e/latency-validation.txt

> ndi-android-e2e@0.1.0 test
> playwright test --project=android-primary --grep=@latency|regression-gate|regression-manifest


Running 27 tests using 7 workers

  Γ£ô   2 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:31:5 ΓÇ║ @latency @us1 cross-correlation window scores aligned signal strongly (16ms)
  Γ£ô   3 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:41:5 ΓÇ║ @latency @us1 latency analysis returns VALID result with expected lag (17ms)
  Γ£ô   4 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:64:5 ΓÇ║ @latency @us2 invalid result is returned when receiver playback is not verified (11ms)
  Γ£ô   5 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:81:5 ΓÇ║ @latency @us2 invalid result is returned when recording paths are missing (11ms)
  Γ£ô   7 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:97:5 ΓÇ║ @latency @us2 invalid result is returned for low-correlation input (8ms)
  Γ£ô   8 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:116:5 ΓÇ║ @latency @us2 invalid result is returned when lag is negative (6ms)
  Γ£ô   6 [android-primary] ΓÇ║ tests\support\android-ui-driver.spec.ts:45:5 ΓÇ║ @latency @us2 dual-recording lifecycle rejects invalid maxDurationSeconds (52ms)
  Γ£ô   9 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:136:5 ΓÇ║ @latency @us2 invalid helper returns standardized payload (11ms)
  Γ£ô  11 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:145:5 ΓÇ║ @latency @us2 invalid result is returned when recording files are not found on disk (4ms)
  Γ£ô  10 [android-primary] ΓÇ║ tests\support\android-ui-driver.spec.ts:53:5 ΓÇ║ @latency @us2 dual-recording lifecycle rejects invalid bitRateMbps (7ms)
  Γ£ô  12 [android-primary] ΓÇ║ tests\support\latency-analysis.spec.ts:162:5 ΓÇ║ @latency @us2 invalid result is returned when recording files are empty (12ms)
  Γ£ô  13 [android-primary] ΓÇ║ tests\support\regression-gate.spec.ts:23:5 ΓÇ║ @us3 regression gate includes required baseline scenarios (25ms)
  Γ£ô  15 [android-primary] ΓÇ║ tests\support\regression-gate.spec.ts:31:5 ΓÇ║ @us3 regression gate is not empty (7ms)
  Γ£ô  14 [android-primary] ΓÇ║ tests\support\regression-manifest-consistency.spec.ts:16:5 ΓÇ║ @us3 manifest defines existing-regression suite (25ms)
  Γ£ô  16 [android-primary] ΓÇ║ tests\support\scenario-checkpoints.spec.ts:68:5 ΓÇ║ @latency @us2 latency recorder supports optional youtube-unavailable checkpoint skip (18ms)
  Γ£ô  17 [android-primary] ΓÇ║ tests\support\e2e-suite-classification.spec.ts:47:5 ΓÇ║ @latency @us1 suite classification: latency specs are unique (18ms)
  Γ£ô  19 [android-primary] ΓÇ║ tests\support\scenario-checkpoints.spec.ts:91:5 ΓÇ║ @latency @us2 latency recorder emits explicit youtube-unavailable failure step (10ms)
  Γ£ô  18 [android-primary] ΓÇ║ tests\support\regression-manifest-consistency.spec.ts:21:5 ΓÇ║ @us3 manifest paths resolve to workspace test specs (32ms)
  Γ£ô  20 [android-primary] ΓÇ║ tests\support\e2e-suite-classification.spec.ts:51:5 ΓÇ║ @latency @us1 suite classification: latency specs stay isolated from settings suite (7ms)
  Γ£ô  21 [android-primary] ΓÇ║ tests\support\regression-manifest-consistency.spec.ts:30:5 ΓÇ║ @us3 manifest has no duplicate entries (7ms)
  Γ£ô  22 [android-primary] ΓÇ║ tests\support\e2e-suite-classification.spec.ts:57:5 ΓÇ║ @latency @us3 suite classification: latency specs are tracked by existing regression suite (5ms)
  Γ£ô  23 [android-primary] ΓÇ║ tests\support\regression-manifest-consistency.spec.ts:35:5 ΓÇ║ @us3 quality summary wiring includes latency scenario and existing regression (17ms)
  Γ£ô  24 [android-primary] ΓÇ║ tests\support\regression-manifest-consistency.spec.ts:46:5 ΓÇ║ @us3 summary script emits latency and regression suites (7ms)
  Γ£ÿ   1 [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1235:5 ΓÇ║ @latency @us1 measure end-to-end NDI latency happy path (2.4s)
  Γ£ÿ  25 [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1235:5 ΓÇ║ @latency @us1 measure end-to-end NDI latency happy path (retry #1) (92ms)
  Γ£ÿ  26 [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1251:5 ΓÇ║ @latency @us1 emits mandatory latency artifact paths (79ms)
  Γ£ÿ  27 [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1251:5 ΓÇ║ @latency @us1 emits mandatory latency artifact paths (retry #1) (95ms)
  Γ£ô  28 [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1262:5 ΓÇ║ @latency @us2 invalidates when receiver playback verification fails (11ms)
  Γ£ô  29 [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1280:5 ΓÇ║ @latency @us2 invalidates when recordings are missing or unusable (28ms)


  1) [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1235:5 ΓÇ║ @latency @us1 measure end-to-end NDI latency happy path 

    Error: Command failed: adb -s emulator-5554 get-state
    * daemon not running; starting now at tcp:5037
    * daemon started successfully
    error: device 'emulator-5554' not found


       at support\android-device-fixtures.ts:52

      50 |   for (let attempt = 0; attempt < 3; attempt++) {
      51 |     try {
    > 52 |       return execFileSync("adb", ["-s", serial, ...args], {
         |                          ^
      53 |         encoding: "utf-8",
      54 |         stdio: ["ignore", "pipe", "pipe"],
      55 |       }).trim();
        at runAdb (C:\gitrepos\NDI-for-Android\testing\e2e\tests\support\android-device-fixtures.ts:52:26)
        at verifyDeviceReady (C:\gitrepos\NDI-for-Android\testing\e2e\tests\support\android-device-fixtures.ts:84:17)
        at runLatencyMeasurementScenario (C:\gitrepos\NDI-for-Android\testing\e2e\tests\interop-dual-emulator.spec.ts:200:20)
        at C:\gitrepos\NDI-for-Android\testing\e2e\tests\interop-dual-emulator.spec.ts:1237:21

    Retry #1 ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇ

    Error: Command failed: adb -s emulator-5554 get-state
    error: device 'emulator-5554' not found


       at support\android-device-fixtures.ts:52

      50 |   for (let attempt = 0; attempt < 3; attempt++) {
      51 |     try {
    > 52 |       return execFileSync("adb", ["-s", serial, ...args], {
         |                          ^
      53 |         encoding: "utf-8",
      54 |         stdio: ["ignore", "pipe", "pipe"],
      55 |       }).trim();
        at runAdb (C:\gitrepos\NDI-for-Android\testing\e2e\tests\support\android-device-fixtures.ts:52:26)
        at verifyDeviceReady (C:\gitrepos\NDI-for-Android\testing\e2e\tests\support\android-device-fixtures.ts:84:17)
        at runLatencyMeasurementScenario (C:\gitrepos\NDI-for-Android\testing\e2e\tests\interop-dual-emulator.spec.ts:200:20)
        at C:\gitrepos\NDI-for-Android\testing\e2e\tests\interop-dual-emulator.spec.ts:1237:21

    attachment #1: trace (application/zip) ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇ
    test-results\interop-dual-emulator--lat-feb93--end-NDI-latency-happy-path-android-primary-retry1\trace.zip
    Usage:

        npx playwright show-trace test-results\interop-dual-emulator--lat-feb93--end-NDI-latency-happy-path-android-primary-retry1\trace.zip

    ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇ

  2) [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1251:5 ΓÇ║ @latency @us1 emits mandatory latency artifact paths 

    Error: Command failed: adb -s emulator-5554 get-state
    error: device 'emulator-5554' not found


       at support\android-device-fixtures.ts:52

      50 |   for (let attempt = 0; attempt < 3; attempt++) {
      51 |     try {
    > 52 |       return execFileSync("adb", ["-s", serial, ...args], {
         |                          ^
      53 |         encoding: "utf-8",
      54 |         stdio: ["ignore", "pipe", "pipe"],
      55 |       }).trim();
        at runAdb (C:\gitrepos\NDI-for-Android\testing\e2e\tests\support\android-device-fixtures.ts:52:26)
        at verifyDeviceReady (C:\gitrepos\NDI-for-Android\testing\e2e\tests\support\android-device-fixtures.ts:84:17)
        at runLatencyMeasurementScenario (C:\gitrepos\NDI-for-Android\testing\e2e\tests\interop-dual-emulator.spec.ts:200:20)
        at C:\gitrepos\NDI-for-Android\testing\e2e\tests\interop-dual-emulator.spec.ts:1253:21

    Retry #1 ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇ

    Error: Command failed: adb -s emulator-5554 get-state
    error: device 'emulator-5554' not found


       at support\android-device-fixtures.ts:52

      50 |   for (let attempt = 0; attempt < 3; attempt++) {
      51 |     try {
    > 52 |       return execFileSync("adb", ["-s", serial, ...args], {
         |                          ^
      53 |         encoding: "utf-8",
      54 |         stdio: ["ignore", "pipe", "pipe"],
      55 |       }).trim();
        at runAdb (C:\gitrepos\NDI-for-Android\testing\e2e\tests\support\android-device-fixtures.ts:52:26)
        at verifyDeviceReady (C:\gitrepos\NDI-for-Android\testing\e2e\tests\support\android-device-fixtures.ts:84:17)
        at runLatencyMeasurementScenario (C:\gitrepos\NDI-for-Android\testing\e2e\tests\interop-dual-emulator.spec.ts:200:20)
        at C:\gitrepos\NDI-for-Android\testing\e2e\tests\interop-dual-emulator.spec.ts:1253:21

    attachment #1: trace (application/zip) ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇ
    test-results\interop-dual-emulator--lat-23809-tory-latency-artifact-paths-android-primary-retry1\trace.zip
    Usage:

        npx playwright show-trace test-results\interop-dual-emulator--lat-23809-tory-latency-artifact-paths-android-primary-retry1\trace.zip

    ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇ

  2 failed
    [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1235:5 ΓÇ║ @latency @us1 measure end-to-end NDI latency happy path 
    [android-primary] ΓÇ║ tests\interop-dual-emulator.spec.ts:1251:5 ΓÇ║ @latency @us1 emits mandatory latency artifact paths 
  25 passed (21.9s)

To open last HTML report run:
[36m[39m
[36m  npx playwright show-report[39m
[36m[39m
